Only flag subnetwork edges if both edge keys belong to subnetworks